add addendum on hobbies, happiness to lifestyle
add optional height, fullwidth option to
drawWordCloud

--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -166,3 +166,34 @@
 </div>
 
 <div class="vbx2"></div>
+
+<h3> Things That Make Us Happy </h3>
+<p class="half">
+  <span class="big">
+    "Friends are the artists who paint happy lips on your face."
+  </span>
+  - Richelle E. Goodrich
+  <br/>
+  Spending time with friends made SE 21 the most happy, followed by cooking and/or
+  eating food. Enjoying familial presence came in third.
+</p>
+<div class="half second">
+  <span class="graph-title">Joy bringers</span>
+  <div id="happy-things"></div>
+</div>
+<div class="hvb"></div>
+
+<h3> Where Our Hobbies Lie </h3>
+<p class="full">
+  <span class="big">
+    Did cooking as a hobby lead to cooking often, or was it the other way around?
+  </span>
+  Cooking was the top stated unique hobby, but sports dominated the hobby landscape.
+  One person responded that they felt that they had lost hobbies, instead of picking
+  one up, in the past 5 years.
+</p>
+<div class="vb"></div>
+<div class="full">
+  <span class="graph-title">Hobbies picked up during the last 5 years</span>
+  <div id="hobbies"></div>
+</div>
