--- a/content/relationships.html
+++ b/content/relationships.html
@@ -33,7 +33,7 @@
 <p class="full">
   Disregarded data: the last bins (20 K km away)
 </p>
-<br/>
+<div class="hvb"></div>
 
 <h3>Friendships</h3>
 <p class="full">
@@ -42,7 +42,7 @@
   term. Thus, the net gain in friends over coop is about 3.1 friends, while the net
   gain over a school term is 2.49 friends.
 </p>
-<br/>
+<div class="hvb"></div>
 <div class="half">
   <span class="graph-title">
     Friend gains over a coop term
@@ -67,7 +67,47 @@
   </span>
   <div id="friends-loss-school"></div>
 </div>
-<br/>
+
+<p class="full">
+  <span class="big">
+    From classmates to friends..?
+  </span>
+  We asked SEs to recall what the most touching thing a fellow classmate
+  had done for them. The following responses are either directly quoted or
+  rephrased from the original submissions.
+</p>
+<div class="hvb"></div>
+<h6>The most touching thing that a classmate has done for me was...</h6>
+<p class="quote">
+  Sticking by my side since day 1.
+  <br /><br />
+  Pulling an all nighter to help me with an assignment they had already finished.
+  <br /><br />
+  Reaching out during COVID. The number of people (myself included now!) who've
+  just touched base to have little catchup calls, who I probably wouldn't have
+  talked to too much in person, has been really sweet.
+  <br /><br />
+  To help me travel home on St Patrick's day when I was blackout drunk.
+  <br /><br />
+  Supporting me when I needed help in a foreign country.
+  <br /><br />
+  To give me notes.
+  <br /><br />
+  When one classmate introduced me to his friends and made me feel super welcome
+  when I transferred into SE. It was super awesome of him to do so and those
+  [friends] were the friends I stuck with throughout SE.
+  <br /><br />
+  Hosting a surprise party for my birthday.
+  <br /><br />
+  Staying up with me after a breakup
+  <br /><br />
+  One time my classmate bought us a PS5 so we could play Call of Duty in between
+  assignments.
+  <br /><br />
+  So many, I can't even think of what was the "most" touching.
+</p>
+
+<div class="vbx2"></div>
 
 <h3>Romance</h3>
 <p class="full">
@@ -78,14 +118,14 @@
   spent at least half of their degree in a romantic relationship. Only 1 person was
   not single throughout their entire degree.
 </p>
-<br/>
+<div class="hvb"></div>
 <div class="full">
   <span class="graph-title">
     Percentage of degree spent in a romantic relationship
   </span>
   <div id="romance-degree"></div>
 </div>
-<br/>
+<div class="vb"></div>
 
 <div class="half">
   <span class="graph-title">
