add additional stories to misc

--- a/content/misc.html
+++ b/content/misc.html
@@ -77,10 +77,40 @@ some stories over the past 5 years.
     </p>
   </div>
 
-  <div class="vbx2"></div>
+  <div class="vb"></div>
+  <div class="path-item">
+    <span class="big path-title">Precious Pronto Parties</span>
+    <p>
+      "Sometimes I regret choosing SE, but then I remember how lit the Pronto
+      parties were."
+    </p>
+  </div>
+
+  <div class="vb"></div>
+  <div class="path-item">
+    <span class="big path-title">A Required Room of Resources</span>
+    <p>
+      "The closest friends I made, I made them in the Software Lounge. I don't know
+      if its the room or the people who also thought the lounge was a great place to
+      hangout, but I had so many fond memories there. I worked there all the time
+      and sometimes cried there too, played a lot of games, goofed around, slept on
+      the couch (which is definitely a must) but also that's where I got to meet my
+      FYDP team. Find a Software Lounge in your life and oh my your University Degree
+      is gonna fly by."
+    </p>
+  </div>
 </div>
 
 <div class="half second">
+  <div class="vb"></div>
+  <div class="path-item">
+    <span class="big path-title">Cheery Celebrations</span>
+    <p>
+      "Shinwa hits different when you’re celebrating 🥳"
+    </p>
+  </div>
+
+  <div class="vb"></div>
   <div class="path-item">
     <span class="big path-title">Turns on a Tuesday</span>
     <p>
@@ -94,10 +124,10 @@ some stories over the past 5 years.
       to work the next day.
       <br /><br />
       The team's parties no longer serve shots."
-      <br /><br />
     </p>
   </div>
 
+  <div class="vb"></div>
   <div class="path-item">
     <span class="big path-title">Climbing Coders</span>
     <p>
@@ -105,7 +135,27 @@ some stories over the past 5 years.
       climb some buildings, ended up with me falling off said building."
     </p>
   </div>
+
+  <div class="vb"></div>
+  <div class="path-item">
+    <span class="big path-title">Speaking of Slowed Schooling...</span>
+    <p>
+      "Back in first year, when the Facebook group chat was active, someone changed
+      the group chat name to SE2022 because of the brutal ECE105 final we just had
+      (interesting discussions were had, including considering switching to
+      CS/Management/Arts)."
+    </p>
+  </div>
+
+  <div class="vb"></div>
+  <div class="path-item">
+    <span class="big path-title">Software Swagger</span>
+    <p>
+      "Proud to be part of SE21 which is full of brilliant and competent people."
+    </p>
+  </div>
 </div>
+<div class="vb"></div>
 
 <h3> Crying Frequency </h3>
 <p class="half">
