Added annendum sections

--- a/content/coop.html
+++ b/content/coop.html
@@ -244,3 +244,40 @@ imply higher job satisfaction.
   <span class="graph-title"> Admission average compared to monthly salary</span>
   <div id="admission-salary"></div>
 </div>
+
+<div class="vbx2"></div>
+<h3> Interviews </h3>
+<p class="full">
+  Over the coop interview cycles students have sometimes missed an interview or were late to an interview. 
+</p>
+<div class="vb"></div>
+<div class="half">
+  <span class="graph-title">Missed an Interview</span>
+  <div id="missed_interview" class="graph-center"></div>
+</div>
+<div class="half second">
+    <span class="graph-title">Late to an Interviews</span>
+    <div id="late_interview" class="graph-center"></div>
+</div>
+<div class="vb"></div>
+<div class="half">
+  <span class="big">Story 1</span>
+  <p>
+    "I waited in the TC lobby and at T+5mins my name hadn't shown up so I double checked and it was actually a phone interview. 
+    By some miracle I had my laptop in my bag, so I barged in a random office in TC and pleaded to use the room. 
+    Luckily the office worker let me use the room for 30 minutes. Pulled up a chair and somehow aced the interview. 
+    Ended up getting the offer and taking it."
+  </p>
+</div>
+<div class="half second">
+  <span class="big">Story 2</span>
+  <p>
+    "They requested a paper copy of my resume, so I had to print one. So went to the interview from V1, 
+    was even going to be early, got to the environment buildings and realized I forgot to print the resume, 
+    so had to go back. Had issues printing, and then when I got back to my room I couldn't find my keys 
+    (for some reason I had hung them on the light switch so I found them after 
+    I had given up looking and was just going to leave). Finally got there about 30 seconds after they 
+    had called me to the interview, but it felt like I was going to be 10 minutes late. 
+    (also it was raining so I was a soggy mess by the time I got to the interview)"
+  </p>
+</div>
