--- a/content/coop.html
+++ b/content/coop.html
@@ -248,7 +248,7 @@ imply higher job satisfaction.
 <div class="vbx2"></div>
 <h3> Interviews </h3>
 <p class="full">
-  Over the coop interview cycles students have sometimes missed an interview or were late to an interview. 
+  Over the coop interview cycles students sometimes missed an interview or were late to an interview. 
 </p>
 <div class="vb"></div>
 <div class="half">
@@ -256,21 +256,29 @@ imply higher job satisfaction.
   <div id="missed_interview" class="graph-center"></div>
 </div>
 <div class="half second">
-    <span class="graph-title">Late to an Interviews</span>
+    <span class="graph-title">Late to an Interview</span>
     <div id="late_interview" class="graph-center"></div>
 </div>
 <div class="vb"></div>
 <div class="half">
-  <span class="big">Story 1</span>
+  <span class="big">The Phone Interview Mixup</span>
   <p>
     "I waited in the TC lobby and at T+5mins my name hadn't shown up so I double checked and it was actually a phone interview. 
     By some miracle I had my laptop in my bag, so I barged in a random office in TC and pleaded to use the room. 
     Luckily the office worker let me use the room for 30 minutes. Pulled up a chair and somehow aced the interview. 
     Ended up getting the offer and taking it."
   </p>
+  <div class="vb"></div>
+  <span class="big">Alarm Mishaps</span>
+  <p>
+    "I missed my alarm and woke up at 8:20 for an interview at 8:30. I quickly got dressed and ran to TC as fast as I could. My name was
+    already called and the receptionist was trying to get a hold of me through my phone. Finally ran up the stairs, 
+    15 mins late to my 30 min interview and burst in to the room. The interviewer was surprisingly very kind and 
+    understanding and allowed me to catch my breath. Finally, I somehow aced the interview and got the offer."
+  </p>
 </div>
 <div class="half second">
-  <span class="big">Story 2</span>
+  <span class="big">Rainy Day Adventures</span>
   <p>
     "They requested a paper copy of my resume, so I had to print one. So went to the interview from V1, 
     was even going to be early, got to the environment buildings and realized I forgot to print the resume, 
