Update Intro and Outro Text (#14)

--- a/content/end.html
+++ b/content/end.html
@@ -1,7 +1,7 @@
 <h1> Thank you!</h1>
 <p class="full">
   <span class="big">
-    I hope you enjoyed reading the University of Waterloo Software Engineering 2018 Class Profile!
+    We hope you enjoyed reading the University of Waterloo Software Engineering 2021 Class Profile!
   </span>
 </p>
 
@@ -12,37 +12,42 @@ This project wouldn't have been possible without the help of some great people:
 </p>
 
 <div class="vb"></div>
-
 <p class="full">
-<b>Patrick Lam</b>, director of Software Engineering, for confidentially
-managing the data and unbiasedly advising the project from start to finish.
+<b>Andy Zhang</b> for allowing us to fork the 2018 profile site, saving us time
+and letting us focus on making this profile more personal than ever before.
+Also for reviewing our initial drafts and for being available to discuss the
+profile over messenger.
 </p>
 
 <div class="hvb"></div>
 <p class="full">
-<b>Christopher Luc</b> for setting up the processing architecture and advising
-about the best statistical methodologies to apply, and <b>Richard Wong</b> for
-helping write processing scripts.
-</p>
-<div class="hvb"></div>
-
-<p class="full">
-<b>Joey Loi</b> and <b>Atef Chaudhury</b> for inspiring me to create this class
-profile. Much of the process and structure of this was borrowed from their
-Systems Design Engineering
-2017 Class Profile.
-</p>
-
-<div class="hvb"></div>
-<p class="full">
-<b>Jenny Sun, Derrek Chow, Kaitlyn Yong</b>, and <b>Bo Peng</b> for providing feedback on the
+<b>Patrick Lam, Derek Rayside</b>, and all other SEs for providing feedback on the
 initial drafts of the class profile.
 </p>
 
 <div class="hvb"></div>
 <p class="full">
-<b>Balaji Sankaranarayanan, Emily Walls, Seun Makinde, Soheil
-  Koushan</b>, and <b>Bilal Akhtar</b> for providing feedback on the survey sent out.
+<b>Kashish Goel</b> for starting discussions and early efforts on this class profile
+back in the fall of 2018. Though you transferred out, we appreciate your
+contributions and wish you didn't leave us!
+</p>
+
+<div class="hvb"></div>
+<p class="full">
+<b>Andrew Xia</b> for sharing resources, ideas, and updates as you worked on the ECE
+2021 Class Profile alongside us. We loved exchanging ideas and collaborating with you!
+</p>
+
+<div class="hvb"></div>
+<p class="full">
+<b>Roxane Fruytier</b>, 
+<b>Nader Sabahi</b>, 
+<b>Jaxon Lin</b>, 
+<b>Jenny Wills</b>, 
+<b>Aravind Segu</b>, and
+<b>Akshay Pall</b> 
+for volunteering their time to work on this profile over the past
+several months.
 </p>
 
 <div class="vbx2"></div>
@@ -67,54 +72,73 @@ Academic Calendar
 <div class="vbx2"></div>
 
 <h3> Inspirations </h3>
+
 <p class="full">
-Systems Design Engineering 2017 Class Profile
-<a target="_blank" href="http://joeyloi.com/SYDE2017classprofile.pdf">
-http://joeyloi.com/SYDE2017classprofile.pdf
+Software Engineering 2018 Class Profile
+<a target="_blank" href="https://classprofile.andyzhang.net/">
+  https://classprofile.andyzhang.net/
 </a>
 </p>
 
 <p class="full">
-HackerRank 2018 Developer Skills Report
-<a target="_blank" href="http://research.hackerrank.com/developer-skills/2018/">
-http://research.hackerrank.com/developer-skills/2018/
+Software Engineering 2020 Class Profile
+<a target="_blank" href="https://uw-se-2020-class-profile.github.io/profile.pdf">
+  https://uw-se-2020-class-profile.github.io/profile.pdf
 </a>
 </p>
 
 <p class="full">
-StackOverflow 2018 Developer Survey Results
-<a target="_blank" href="https://insights.stackoverflow.com/survey/2018/">
-https://insights.stackoverflow.com/survey/2018/
+Biomedical Engineering 2019 Class Profile
+<a target="_blank" href="https://medium.com/uwaterloo-voice/university-of-waterloo-biomedical-engineering-2019-class-profile-5e54e8371ed1">
+  https://medium.com/uwaterloo-voice/university-of-waterloo-biomedical-engineering-2019-class-profile-5e54e8371ed1
+</a>
+</p>
+
+<p class="full">
+Systems Design Engineering 2019 Class Profile
+<a target="_blank" href="https://ndey96.github.io/syde_2019_class_profile.pdf">
+  https://ndey96.github.io/syde_2019_class_profile.pdf
+</a>
+</p>
+
+<p class="full">
+Mechatronics Engineering 2020 Class Profile
+<a target="_blank" href="https://tron2020classprofile.github.io/">
+  https://tron2020classprofile.github.io/
+</a>
+</p>
+
+<p class="full">
+Management Engineering 2020 Class Profile
+<a target="_blank" href="https://uwaterloo-mgte-2020-class-profile.github.io/mgteprofile.pdf">
+  https://uwaterloo-mgte-2020-class-profile.github.io/mgteprofile.pdf
+</a>
+</p>
+
+<p class="full">
+Electrical and Computer Engineering 2021 Class Profile
+<a target="_blank" href="https://ece2021profile.github.io/report.pdf">
+  https://ece2021profile.github.io/report.pdf
 </a>
 </p>
 
 <div class="vb"></div>
 <h3> Data </h3>
 <p class="full">
-Processing scripts
-<a target="_blank" href="https://github.com/se2018/class-profile">
-  https://github.com/se2018/class-profile</a>
-</p>
-
-<p class="full">
-Class Profile code
+2018 Class Profile Code
 <a target="_blank" href="https://github.com/andyzg/classprofile">
   https://github.com/andyzg/classprofile</a>
 </p>
 
 <p class="full">
-SE Exit Survey results  (not related to Class Profile)
-<a target="_blank" href="https://ql.tc/Hia9QK">
-  https://ql.tc/Hia9QK
-</a>
+2021 Class Profile Code
+<a target="_blank" href="https://github.com/sexxis/classprofile/">
+  https://github.com/sexxis/classprofile/</a>
 </p>
 
-<div class="vbx2"></div>
-
-<h2> Get in touch! </h2>
 <p class="full">
-Let me know what you think! You can reach me at
-<a href="mailto:andy.zhang@edu.uwaterloo.ca?subject=Hello!">
-  andy.zhang@edu.uwaterloo.ca.
+Patrick Lam's SE Materials
+<a target="_blank" href="https://patricklam.ca/se-materials/">
+  https://patricklam.ca/se-materials/
 </a>
 </p>
