add exchange section (#20)
* add missing data row for relationship data

* update README with index details

* add exchange metadata (no details)

* add span.small stylings

* add data for students who went on exchange

* add geojson map render function

* allow json imports as any type

* add geojson world, exchange data

* represent exchange locations with map

* clarify content (PR comments), reduce map height, change header hierarchy

--- a/content/relationships.html
+++ b/content/relationships.html
@@ -3,9 +3,10 @@
 <h3>Family</h3>
 <p class="half">
   <span class="big"> Some text about family here (todo) </span>
-  Average amount of time spent with family.
+  Before the pandemic, most of us lived near campus and away from family.
   <br /><br />
-  The average amount of time spent digitally with parents was 5.19 hours.
+  The average amount of time spent digitally in a month with parents
+  was 5.10 hours.
 </p>
 <div class="half second">
   <span class="graph-title">
@@ -15,7 +16,8 @@
 </div>
 
 <p class="half">
-  Students spent on average 1.19 days with their parents physically, with 61.67 % spending less than an entire day per month.
+  Students spent on average 1.17 days with their parents physically, with
+  63 % spending less than an entire day per month.
 </p>
 <div class="half second">
   <span class="graph-title">
@@ -27,20 +29,23 @@
 <div class="full">
   <div id="fam-distance"></div>
   <span class="graph-title">
-    Average distance (kilometres) from familial home
+    Distance (kilometres) from familial home
   </span>
 </div>
 <p class="full">
-  Disregarded data: the last bins (20 K km away)
+  Before the pandemic, 85 % of us lived more than 50 kilometres away from our
+  families. The furthest someone lived away was 20 000 kilometres away. That
+  would explain why 63 % of respondents spent on average less than a day with
+  their parents in person.
 </p>
 <div class="hvb"></div>
 
 <h3>Friendships</h3>
 <p class="full">
-  On average, a softie made 4.40 new friends over coop, and 3.05 over a school term.
-  They would lose on average 1.30 friends over coop, compared to 0.56 over a school
+  On average, a softie made 4.36 new friends over coop, and 3.05 over a school term.
+  They would lose on average 1.30 friends over coop, compared to 0.55 over a school
   term. Thus, the net gain in friends over coop is about 3.1 friends, while the net
-  gain over a school term is 2.49 friends.
+  gain over a school term is 2.31 friends.
 </p>
 <div class="hvb"></div>
 <div class="half">
