--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@ layout: main
         {% include_relative content/relationships.html %}
     </div>
 </section>
+<section class="bg-3">
+    <div class="content">
+        {% include_relative content/exchange.html %}
+    </div>
+</section>
 <section class="bg-8">
     <div class="content">
         {% include_relative content/end.html %}
