--- a/content/introduction.html
+++ b/content/introduction.html
@@ -141,7 +141,13 @@ future classes, as we did, in order to take future profiles to new heights.
     <li>11 <a href="#relationships">Family and relationships</a></li>
     <li>
       <p class="nested">
-        Parents, love life
+        Parents, friends, love life
+      </p>
+    </li>
+    <li>12 <a href="#exchange">Exchange</a></li>
+    <li>
+      <p class="nested">
+        Decision-making, experience
       </p>
     </li>
   </ul>
