--- a/content/introduction.html
+++ b/content/introduction.html
@@ -71,7 +71,7 @@ future classes, as we did, in order to take future profiles to new heights.
 
 <div class="vbx4"></div>
 
-<h1>Table of contents</h1>
+<h1 id="toc">Sections</h1>
 <div class="half">
   <ul class="toc">
     <li>1 <a href="#coop">Co-op</a></li>
