--- a/content/coop.html
+++ b/content/coop.html
@@ -248,7 +248,7 @@ imply higher job satisfaction.
 <div class="vbx2"></div>
 <h3> Interviews </h3>
 <p class="full">
-  Over the coop interview cycles students sometimes missed an interview or were late to an interview. 
+  Over the coop interview cycles, students sometimes missed an interview or were late to an interview. 
 </p>
 <div class="vb"></div>
 <div class="half">
@@ -273,16 +273,16 @@ imply higher job satisfaction.
   <p>
     "I missed my alarm and woke up at 8:20 for an interview at 8:30. I quickly got dressed and ran to TC as fast as I could. My name was
     already called and the receptionist was trying to get a hold of me through my phone. Finally ran up the stairs, 
-    15 mins late to my 30 min interview and burst in to the room. The interviewer was surprisingly very kind and 
+    15 mins late to my 30 min interview and burst into the room. The interviewer was surprisingly very kind and 
     understanding and allowed me to catch my breath. Finally, I somehow aced the interview and got the offer."
   </p>
 </div>
 <div class="half second">
   <span class="big">Rainy Day Adventures</span>
   <p>
-    "They requested a paper copy of my resume, so I had to print one. So went to the interview from V1, 
+    "They requested a paper copy of my resume, so I had to print one. So [I] went to the interview from V1, 
     was even going to be early, got to the environment buildings and realized I forgot to print the resume, 
-    so had to go back. Had issues printing, and then when I got back to my room I couldn't find my keys 
+    so [I] had to go back. [I h]ad issues printing, and then when I got back to my room I couldn't find my keys 
     (for some reason I had hung them on the light switch so I found them after 
     I had given up looking and was just going to leave). Finally got there about 30 seconds after they 
     had called me to the interview, but it felt like I was going to be 10 minutes late. 
