--- a/content/health.html
+++ b/content/health.html
@@ -61,10 +61,10 @@
 
 <h3>Imposter Syndrome</h3>
 <p class="half">
-  <span class="big">Over 80% of the respondants felt imposter syndrome over their university years</span>  
+  <span class="big">Over 80% of respondants felt imposter syndrome over their university years</span>  
   Impostor syndrome refers to an individual's internal experience of believing that they are not as competent as others perceive them to be. 
   The Software Engineering Program is very competitive and has one of the highest admission averages in Waterloo. This can place students in a 
-  pressure to achieve environment which might have lead to students feeling like an imposter.
+  pressure-to-achieve environment which might have lead to students feeling like an imposter.
 </p>
 <div class="half second">
   <span class="graph-title">Students who felt Imposter Syndrome</span>
@@ -73,7 +73,7 @@
 <p class="half">
   By the end of their university career, around 46% of students do not feel imposter syndrome, while 30% of the students sometimes do and 24% of the 
   students still do. This shows a growth in the student's confidence over the years as they overcame their academic hurdles, experienced the real world
-  during coops and found their calling in software engineering. 
+  during coops, and found their calling in software engineering. 
 </p>
 <div class="half second">
   <span class="graph-title">Students who still feel Imposter Syndrome</span>
