Add addendum results to Lifestyle Section (#17)
* Update lifestyle section with addendum results

* Update typos and upload build file

* Remove build min file

--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -1,5 +1,52 @@
 <h1 id="lifestyle"> Lifestyle & Experiences</h1>
 
+<h3> Tech Habits </h3>
+<p class="half">
+  <span class="big">
+    Python is the most popular programming language.
+  </span>
+  Python has diverse applications such as prototyping, web applications, machine learning, and scripting.
+  These are common areas faced by Software Engineers, making Python an ideal general purpose language that is easy to pick up.
+  <br/> <br/>
+  C++ is one of the first languages that SE students encounter in their courses.
+  It provides a strong programming foundation and is highly portable, making it an ideal choice for multi-platform development.
+  It also has applications in Enterprise codebases, so students may encounter it over Co-op as well.
+  <br/> <br/>
+  Many students encounter web development either during co-op or for side projects.
+  This may explain why many students pick up JavaScript and TypeScript.
+</p>
+<div class="half second">
+  <span class="graph-title">Favourite programming language</span>
+  <div id="programming-language"></div>
+</div>
+
+<p class="half">
+  <span class="big">
+    Visual Studio Code was the most popular editor. Trailing farther behind were Vim and IntelliJ.
+  </span>
+  Visual Studio Code provides large extension and theme ecosystems which makes it easy to use and set up for various types of projects.
+  <a rel="noopener" href="https://insights.stackoverflow.com/survey/2019#technology-_-most-popular-development-environments" target="_blank" > According to this Stack Overflow survey</a> VSCode was also rated as the most popular development environment.
+
+</p>
+<div class="half second">
+  <span class="graph-title">Favourite editor</span>
+  <div id="editor"></div>
+</div>
+
+<p class="half">
+  <span class="big">
+    iOS was the favourite mobile OS, used among 63% of students.
+  </span>
+  Interestingly, Android dominates the <a rel="noopener" href="https://gs.statcounter.com/os-market-share/mobile/worldwide" target="_blank" >Worldwide market share</a>, running on around 72% of devices compared to 26% for iOS.
+  <br/> <br/>
+  However, in North America, we see 53% of devices running iOS and 45% using Android, which is a similar proportion to what is seen among SE students.
+</p>
+<div class="half second">
+  <span class="graph-title">Favorite mobile OS</span>
+  <div id="mobile-os"></div>
+</div>
+
+
 <h3> Food Preparation </h3>
 <p class="half">
   <span class="big">
