Update coop and future sections with addendum results (#27)
* Update coop and future sections with addendum results

* Remove extra stories from favourite co-op

--- a/content/coop.html
+++ b/content/coop.html
@@ -289,3 +289,47 @@ imply higher job satisfaction.
     (also it was raining so I was a soggy mess by the time I got to the interview)"
   </p>
 </div>
+
+<div class="vbx2"></div>
+<h3> Favourite Co-op Companies </h3>
+<p class="full">
+  <span class="big">
+    With 5-6 co-op experiences under their belt, we wanted to see what companies were among students' favourites and why.
+  </span>
+  Among 31 respondents, we grouped the written responses among the 8 categories below to see which factors weighed most when choosing their favourite companies.
+  <br/>
+  Interest in work was the most common factor affecting students' enjoyment at a company. When students are engaged and interested in their work and projects, they get more enjoyment from their co-op experience.
+  Following that, factors such as salary, work benefits, culture, and co-worokers were roughly equally important factors.
+</p>
+<div class="vbx2"></div>
+<div class="half second">
+  <span class="graph-title"> Favourite co-op company</span>
+  <div id="favourite-coop"></div>
+</div>
+<div class="half second">
+  <span class="graph-title"> Reasons for choosing favourite company</span>
+  <div id="favourite-coop-reasons"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3> Favourite Co-op Experiences </h3>
+<span class="big">
+  We wanted to see what students enjoyed the most over their co-op experience, independent of the work/company itself.
+</span>
+<div class="half">
+  <p>"Finally getting an offer in California"</p>
+  <div class="vb"></div>
+  <p>"Making some (hopefully) lifelong friends during the coop of summer 2019"</p>
+  <div class="vb"></div>
+  <p>"I got to participate in a DnD one-shot hosted by a coworker, and our party's first reaction to any encounter was to try to burn the place down first. Our DM designed the final encounter to take longer than what we ended up taking (it was supposed to be in a house full of booby traps and whatnot), but our arsonistic nature forced the final boss and his henchmen to abandon their base and fight us out in the open"</p>
+</div>
+<div class="half second">
+  <p>"Yosemite camping "</p>
+  <div class="vb"></div>
+  <p>"Drinking beer at work with my boss"</p>
+  <div class="vb"></div>
+  <p>"Too many to pick. A funny one is once someone leaked [company X's] internal uber/lyft codes and we were taking unlimited $500 Uber Luxe XLs across California."</p>
+  <div class="vb"></div>
+  <p>"Most of them were great but my time in California was definitely the most memorable since I met so many new people and experienced a lot of fun things for the first time. Great weather, great activities, great trips to new cities and great people made for an exciting coop term!"</p>
+</div>
