--- a/content/future.html
+++ b/content/future.html
@@ -103,3 +103,21 @@
   - University of Waterloo Software Engineering Class of 2018
   </p>
 </p>
+
+<div class="vbx2"></div>
+
+<h3> Moving home </h3>
+<p class="half">
+  <span class="big">
+    27% of students plan to return to their home country after moving away.
+  </span>
+  Moving away is a big change. There's a fairly even split among students who would like to return home or stay abroad, while the rest of students haven't decided yet.
+  This goes to show that everyone has different goals and each student should find what's important to them.
+  <br/><br/>
+  One common tip from alumni is to pursue what makes you happy and aligns with your values.
+  This way, you can find the most happiness in what you do, whether that's close to home or abroad.
+</p>
+<div class="half second">
+  <span class="graph-title">Plans to return to home country</span>
+  <div id="post-return-home"></div>
+</div>
