Update Demographic Section Again (#18)
* Add new graphs, fix color issue and use histogram

* fix nits

* fix nits

--- a/content/background.html
+++ b/content/background.html
@@ -58,22 +58,21 @@
 
 <div class="vbx2"></div>
 
-<h3>Mother Tongue</h3>
+<h3>Sexual Orientation</h3>
 <p class="half">
   <span class="big">
-  45% of respondents at least speak two languages, with English not being their first language.
+  At least 6.9% of respondents are part of the LGBTQ+ community.
   </span>
-  There was a significant number of students who spoke English and Mandarin as their first language, but overall,
-  there is a wide variety of language spoken by students.
+  4 students preferred not to disclose.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' Mother Tongue</span>
-  <div id="mother-tongue"></div>
+  <span class="graph-title">Students' Sexual Orientation</span>
+  <div id="sexual-orientation"></div>
 </div>
 
 <div class="vbx2"></div>
-
-<h3> International students </h3>
+<h2> International Students, Immigration and Home Location </h2>
+<h3> International Students </h3>
 <p class="half">
   <span class="big">
   8.4% of respondents are international students, however, according to the official headcount
@@ -92,21 +91,25 @@
   <div id="international"></div>
 </div>
 
-<div class="vbx2"></div>
-
 <h3>Immigrated to Canada</h3>
-<p class="half">
+<p class="full">
   <span class="big">
   35.7% of students, or 39% of domestic students immigrated to Canada.
   </span>
-  Immigrated students came from countries including [TO ADD IF WE GET THIS INFO LATER]
+  Immigrated students are any students who are considered domestic students and <a href="https://uwaterloo.ca/graduate-studies-academic-calendar/general-information-and-regulations/fee-schedule-and-tuition-assessment-information" target="_blank">do not pay
+  as a result international tuition</a>, and among others are naturalized citizens or are Permanent Residents of Canada.
+  Immigrated students came from countries including Belgium, China, England and India.
 </p>
-<div class="half second">
-  <span class="graph-title">Students' Immigrated to Canada</span>
+<div class="vb"></div>
+<div class="half">
+  <span class="graph-title">Students Immigrated to Canada?</span>
   <div id="immigrated"></div>
 </div>
-
-<div class="vbx2"></div>
+<!-- I don't think this graph is needed as I mention where immigrated student came from. -->
+<div class="half second">
+  <span class="graph-title">Students Immigrated to Canada from...</span>
+  <div id="emigrated"></div>
+</div>
 
 <h3>Home Location</h3>
 <p class="half">
@@ -121,17 +124,37 @@
 </div>
 
 <div class="vbx2"></div>
+<h2> Languages</h2>
 
-<h3>Sexual Orientation</h3>
+<h3>Mother Tongue</h3>
 <p class="half">
   <span class="big">
-  6.9% of respondents are part of the LGBTQ+ community.
+  45% of respondents' mother tongue is not English.
   </span>
-  4 students preferred not to disclose.
+  There was a significant number of students who spoke English and Mandarin as their first language, but overall,
+  there is a wide variety of language spoken by students.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' Sexual Orientation</span>
-  <div id="sexual-orientation"></div>
+  <span class="graph-title">Students' Mother Tongue</span>
+  <div id="mother-tongue"></div>
+</div>
+
+<h3>Language Spoken</h3>
+<p class="full">
+  <span class="big">
+  63% of respondents at least speak two languages.
+  </span>
+  The most common languages spoken, other than English, are Mandarin and French.
+  Among students who spoke 3+ languages, French was a common spoken language.
+</p>
+<div class="vb"></div>
+<div class="half">
+  <span class="graph-title">Number of Languages Students can Speak</span>
+  <div id="num-languages"></div>
+</div>
+<div class="half second">
+  <span class="graph-title">Languages Students can speak</span>
+  <div id="known-languages"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -151,14 +174,12 @@
   <div id="family-income"></div>
 </div>
 
-<div class="vbx2"></div>
-
 <h3> Level of education </h3>
 <p class="half">
   <span class="big">
   There are more parents with Masters and Doctorates combined than Bachelors.
   </span>
-  Compared to our parents, only 1 student is planning on attending
+  Compared to our parents, only 3 students are planning on attending
   grad school. This could
   be a generational shift, or maybe because entering the industry does not require
   a Master or Doctorate.
@@ -202,7 +223,7 @@
 <h3>Enriched Programs</h3>
 <p class="half">
   <span class="big">
-  Most students did not take part in an Enriched Program.
+  Just over half of the respondents did not take part in an Enriched Program.
   </span>
   The most popular Enriched Programs among respondents were
   AP and IB.
