add visual indicator to 'pressed' button-items for bar graphs

--- a/content/academics.html
+++ b/content/academics.html
@@ -239,7 +239,7 @@
 
   <div class="scale">
     <span class="legend">Term number:</span>
-    <div class="loc-pre-item c1">1A</div>
+    <div class="loc-pre-item c1 pressed">1A</div>
     <div class="loc-pre-item c2">1B</div>
     <div class="loc-pre-item c3">2A</div>
     <div class="loc-pre-item c4">2B</div>
@@ -267,7 +267,7 @@
 
   <div class="scale">
     <span class="legend">Term number:</span>
-    <div class="loc-post-item c1">4A</div>
+    <div class="loc-post-item c1 pressed">4A</div>
     <div class="loc-post-item c2">4B</div>
   </div>
   <p class="full center">
