--- a/content/background.html
+++ b/content/background.html
@@ -47,7 +47,7 @@
 
   <div class="scale">
     <span class="legend">Filter:</span>
-    <div class="ethnicity-item c1">All</div>
+    <div class="ethnicity-item c1 pressed">All</div>
     <div class="ethnicity-item c2">Women</div>
     <div class="ethnicity-item c3">Men</div>
   </div>
@@ -292,5 +292,3 @@
   <span class="graph-title">Cat or Dog</span>
   <div id="cat-or-dog"></div>
 </div>
-
-
