--- a/content/coop.html
+++ b/content/coop.html
@@ -130,7 +130,7 @@ imply higher job satisfaction.
 
   <div class="scale">
     <span class="legend">Co-op number:</span>
-    <div class="scale-item c1">1</div>
+    <div class="scale-item c1 pressed">1</div>
     <div class="scale-item c2">2</div>
     <div class="scale-item c3">3</div>
     <div class="scale-item c4">4</div>
